#591 Fixed filter style when collapsed

--- a/app/assets/stylesheets/collapsible_crud_box.scss
+++ b/app/assets/stylesheets/collapsible_crud_box.scss
@@ -108,6 +108,12 @@
         margin: 0;
         vertical-align: middle;
       }
+      p {
+        display: inline-block;
+        margin: 5px 0;
+        width: 86%;
+        cursor: pointer;
+      }
     }
   }
   .add-filter {
